--- a/juego/src/main/webapp/css/game.css
+++ b/juego/src/main/webapp/css/game.css
@@ -1,40 +1,111 @@
-*{
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     margin: 0;
     padding: 0;
+    background-image: url('../img/fondos/1.gif');
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-attachment: fixed; 
 }
-body{
+
+.vidas {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
 }
-.vidas{
-    margin-top: 75px;
-    display: flex;
-    flex-direction: column;
-}
-.nombres{
-    display: flex;
-    justify-content: space-between;
-}
-.barra-vida{
-    display: flex;
-    align-items: center;
-}
-.tiempo{
+
+.nombres {
+	width: 100%;
     display: flex;
     justify-content: center;
+	color: black;
 }
-.juego{
-    margin-bottom: 75px;
+.nombres > p{
+	margin: 25px 300px 0 300px;
+	font-size: 30px;
+	font-weight: bolder;
+}
+
+.barra-vida {
+    display: flex;
+    justify-content: center;
+    margin: 0 0px;
+    position: absolute;
+    top: 10%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    width: 60px; 
+    height: auto; 
+}
+
+.tiempo {
+    display: flex;
+    justify-content: center;
+
+    margin: 0 0px;
+    position: absolute;
+    top: 17%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    width: 60px; 
+    height: auto; 
+}
+
+.juego {
+   
     display: flex;
     align-items: end;
 }
-.botones{
+
+.botones1 {
     display: flex;
     flex-direction: column;
-    margin: 0 200px;
+    margin: 0 0px;
+
+    position: absolute;
+    top: 70%; 
+    left: 0%; 
+    transform: translate(-50%, -50%); 
+    width: 0px; 
+    height: auto; 
 }
-.jugador{
-    margin: 0 100px
+
+.botones2 {
+    display: flex;
+    flex-direction: column;
+    margin: 0 0px;
+    position: absolute;
+    top: 70%; 
+    right: 0%; 
+    transform: translate(-50%, -50%); 
+    width: 50px; 
+    height: auto; 
+}
+
+.jugador1 {
+    margin: 0 0px;
+    position: absolute;
+    top: 70%; 
+    left: 20%; 
+    transform: translate(-50%, -50%); 
+    width: 50px; 
+    height: auto; 
+}
+
+.jugador2 {
+    margin: 0 0px;
+    position: absolute;
+    top: 70%; 
+    right: 35%; 
+    transform: translate(-50%, -50%); 
+    width: 50px; 
+    height: auto;
+}
+.jacquarda-bastarda-9-regular {
+  font-family: "Jacquarda Bastarda 9", serif;
+  font-weight: 400;
+  font-style: normal;
 }
