--- a/juego/src/main/webapp/css/final.css
+++ b/juego/src/main/webapp/css/final.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body{
-	background-color: darkblue;
+	background-color: black;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -36,7 +36,7 @@ form button {
 
 .botones {
     margin: 0 0px;
-    border: 2px solid darkblue;
+    border: 2px solid black;
     padding: 0;
     background: none;
 }
