--- a/juego/src/main/webapp/css/index.css
+++ b/juego/src/main/webapp/css/index.css
@@ -10,9 +10,50 @@ body{
     justify-content: space-around;
 }
 .logo{
+   
 }
 .opciones{
     display: flex;
 }
 .final{
+}
+
+.botones {
+    margin: 0 50px;
+    border: 2px solid black;
+    padding: 0;
+    background: none;
+
+}
+
+.botones2 {
+    border: 2px solid black;
+    padding: 0;
+    background: none;
+
+    display: flex;
+    margin: 0 0px;
+    position: absolute;
+    top: 90%;
+    left: 2%;
+    transform: translate(-50%, -50%);
+    width: 0px;
+    height: auto;
+}
+
+
+
+.botones3 {
+    border: 2px solid black;
+    padding: 0;
+    background: none;
+
+    display: flex;
+    margin: 0 0px;
+    position: absolute;
+    top: 90%; 
+    right: 2%; 
+    transform: translate(-50%, -50%); 
+    width: 50px; 
+    height: auto; 
 }
