agregada musica, falta retocar game

--- a/juego/src/main/webapp/css/globals.css
+++ b/juego/src/main/webapp/css/globals.css
@@ -4,8 +4,19 @@ body {
     justify-content: center;
     align-items: center;
 }
-
 body,
 body.swal2-height-auto {
 	height: 100dvh !important;
+}#boton-audio {
+	position: fixed;
+	top: 10px;
+	right: 10px;
+	cursor: pointer;
+    padding: 0;
+    background: none;
+    margin: 0 0px;
+    border: none;
+}
+.botones{
+	cursor: pointer;
 }
