--- a/juego/src/main/webapp/css/globals.css
+++ b/juego/src/main/webapp/css/globals.css
@@ -7,7 +7,8 @@ body {
 body,
 body.swal2-height-auto {
 	height: 100dvh !important;
-}#boton-audio {
+}
+#boton-audio {
 	position: fixed;
 	top: 10px;
 	right: 10px;
