listo, solo falta tabla historial

--- a/juego/src/main/webapp/css/globals.css
+++ b/juego/src/main/webapp/css/globals.css
@@ -21,3 +21,8 @@ body.swal2-height-auto {
 .botones{
 	cursor: pointer;
 }
+.jacquarda-bastarda-9-regular {
+  font-family: "Jacquarda Bastarda 9", serif;
+  font-weight: 400;
+  font-style: normal;
+}
